WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133270
Initialize WKWebViewConfiguration ivars lazily
https://bugs.webkit.org/show_bug.cgi?id=133270
Summary
Initialize WKWebViewConfiguration ivars lazily
Anders Carlsson
Reported
2014-05-25 18:11:39 PDT
Initialize WKWebViewConfiguration ivars lazily
Attachments
Patch
(9.05 KB, patch)
2014-05-25 18:16 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-05-25 18:16:54 PDT
Created
attachment 232046
[details]
Patch
WebKit Commit Bot
Comment 2
2014-05-25 18:18:37 PDT
Attachment 232046
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:106: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:116: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:126: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:136: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:146: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:157: More than one command on the same line [whitespace/newline] [4] Total errors found: 6 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2014-05-26 09:41:11 PDT
Committed
r169351
: <
http://trac.webkit.org/changeset/169351
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug